fixed h3 spacing

--- a/mainpage.css
+++ b/mainpage.css
@@ -1,20 +1,9 @@
-.execsum {
-    margin: 20px;
-    padding: 10px;
+
+
+.h3--margin {
+    margin: 20px 0 20px 0;
 }
 
-.kAsso {
-    margin: 0  0 20px 0;
-}
-
-.kAlias {
-    margin: 20px 0 10px 0;
-}
-
-.country {
-    margin: 20px 0 10px 0;
-}
-
-.canada {
-    margin: 0 0 30px 0;
-}
+ .summary {
+    margin-bottom: 30px;
+} 
